<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.UserDetailsFragment"
    android:background="@drawable/gradient_user_details_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_arrow_dismiss"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_expand_more"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/txt_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sample_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_toEndOf="@+id/img_arrow_dismiss"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_detail_name"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/img_detail_user"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true" />

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/indicatorDetail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    app:indicatorName="BallTrianglePathIndicator"/>

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_detail_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_phone"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_call"
                        android:drawablePadding="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/txt_detail_cell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_phone"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_phone_android"
                        android:drawablePadding="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/txt_detail_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_email"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_mail"
                        android:drawablePadding="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">


                        <TextView
                            android:id="@+id/txt_detail_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_age"
                            android:layout_marginStart="16dp" />


                        <TextView
                            android:id="@+id/txt_detail_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_gender"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="16dp"
                            android:textAlignment="viewEnd"/>


                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_address"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"/>

                    <TextView
                        android:id="@+id/txt_detail_street"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_street"
                        android:layout_marginStart="16dp" />

                    <TextView
                        android:id="@+id/txt_detail_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_city"
                        android:layout_marginStart="16dp" />
                    <TextView
                        android:id="@+id/txt_detail_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_state"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>



    </RelativeLayout>

</ScrollView>