<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"/>

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:indicatorColor="@color/colorBlack"
                android:layout_centerInParent="true"
                app:indicatorName="BallTrianglePathIndicator"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_name"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:paddingStart="32dp"
                    android:paddingEnd="4dp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="24dp"/>

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_phone"
                    android:drawableStart="@drawable/ic_call"
                    android:textSize="16sp"
                    android:drawablePadding="2dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="4dp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="4dp"/>

                <Button
                    android:id="@+id/btn_more"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/more"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/round_button_style"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>